samples/_failures_safe/1761127440_daf33f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9c84b27.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_a9c84b27.c:153: error: expected ‘{’ at end of input
